--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
+    "@types/lodash": "^4.14.200",
     "@types/mongoose": "^5.11.97",
     "mongodb": "^6.1.0",
     "nodemon": "^3.0.1",
@@ -29,6 +30,8 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^7.6.2"
   }
 }
